@@ -1,9 +1,7 @@
-0.3.x:
+q.3.x:
 - password strength check (cracklib?)
 - option for autolocking the file after a period of inactivity
 - add a password generator dialog (under Tools/Password Generator menu)
-- program-launchers for misc account types (announce on rvl-list
-  when done in svn)
 - export to XHTML/CSS files
 - add a "changed" signal to the EntryStore - requires all methods to
   be atomic (can't call add_entry() etc directly, since it triggers
